Fix table overflow problem

--- a/client/src/views/Page/Page.css
+++ b/client/src/views/Page/Page.css
@@ -2,6 +2,10 @@
     margin-bottom: 0.5em;
 }
 
+.tab-content {
+    overflow-y: auto;
+}
+
 .child-container-div {
     width: 100%;
     display: flex;
